<resources>
    <string name="app_name">Proxer FanApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="title_activity_list_test">Test</string>
    <string name="title_activity_news">News</string>
    <string name="notificationNews">Benachrichtigung bei neuer News</string>
    <string name="notificationNewsDesc">Wenn aktiviert bekommst du immer eine Benachrichtigung bei neuen News.</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="notificationAudio">Benachrichtigungston</string>
    <string name="refreshRate">Aktualisierungsrate</string>
    <string name="refreshRateDesc">Alle wieviel Minuten soll nach neuen Benachrichtigungen gesucht werden.</string>
    <string name="abc_navigation_news">News</string>
    <string name="abc_navigation_anime">Anime</string>
    <string name="abc_navigation_settings">Einstellungen</string>
    <string name="drawer_open">Kategorie auswählen</string>
    <string name="drawer_close">Drawer zu</string>
    <string name="abc_license">Lizenzen</string>
    <string name="abc_license_title">Open Source Lizenzen</string>
    <string name="abc_license_sum_up">Alle verwendeten Open Source Lizenzen.</string>
    <string name="app_description">Diese App ist eine Fanentwicklung für die ProxerME Community.</string>
    <string name="abc_anime">Anime</string>
    <string name="abc_play">Wiedergeben</string>
    <string name="abc_filter">Filter</string>
    <string name="abc_filter_eng_sub">Eng Sub</string>
    <string name="abc_filter_ger_sub">Ger Sub</string>
</resources>
